@@ -51,6 +51,7 @@
 	define('T_ZBX_CLR',			5);
 	define('T_ZBX_PORTS',			6);
 	define('T_ZBX_IP_RANGE',		7);
+	define('T_ZBX_INT_RANGE',		8);
 
 	define('O_MAND',			0);
 	define('O_OPT',				1);
